compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__documentation__backslashes_in_documentation_are_escaped.snap
---
source: compiler-core/src/erlang/tests/documentation.rs
expression: "\n/// \\hello\\\npub fn documented() { 1 }"
---
----- SOURCE CODE

/// \hello\
pub fn documented() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([documented/0]).

-spec documented() -> integer().
-doc(~" \\hello\\").
documented() ->
    1.
