compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__documentation__double_quotes_are_escaped_in_module_comment.snap
---
source: compiler-core/src/erlang/tests/documentation.rs
expression: "\n//// \"quotes!\"\n\npub fn main() { 1 }"
---
----- SOURCE CODE

//// "quotes!"

pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).
-moduledoc(~" \"quotes!\"").

-spec main() -> integer().
main() ->
    1.
