compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__documentation__function_with_documentation.snap
---
source: compiler-core/src/erlang/tests/documentation.rs
expression: "\n/// Function doc!\npub fn documented() { 1 }"
---
----- SOURCE CODE

/// Function doc!
pub fn documented() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([documented/0]).

-spec documented() -> integer().
-doc(~" Function doc!").
documented() ->
    1.
