compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__documentation__internal_function_has_no_documentation.snap
---
source: compiler-core/src/erlang/tests/documentation.rs
expression: "\n/// hidden!\n@internal\npub fn main() { 1 }"
---
----- SOURCE CODE

/// hidden!
@internal
pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
-doc(false).
main() ->
    1.
