compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__documentation__multi_line_module_comment.snap
---
source: compiler-core/src/erlang/tests/documentation.rs
expression: "\n//// Hello! This is a multi-\n//// line module comment.\n////\n\npub fn main() { 1 }"
---
----- SOURCE CODE

//// Hello! This is a multi-
//// line module comment.
////

pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).
-moduledoc(~" Hello! This is a multi-
 line module comment.
").

-spec main() -> integer().
main() ->
    1.
